workshops/advanced-aks/assets/acns-network-policy-fqdn.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-order-service-traffic
spec:
  endpointSelector:
    matchLabels:
      app: order-service
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
        - matchLabels:
            io.kubernetes.pod.namespace: pets
            app: rabbitmq
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "rabbitmq.pets.svc.cluster.local"
              - matchPattern: "*.microsoft.com"
              - matchPattern: "*.microsoft.com.cluster.local"
              - matchPattern: "*.microsoft.com.pets.svc.cluster.local"
              - matchPattern: "*.microsoft.com.*.*.internal.cloudapp.net"
              - matchPattern: "*.microsoft.com.svc.cluster.local"
    - toFQDNs:
        - matchPattern: "*.microsoft.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
